// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom field resources createCustomField should resolve with a new CustomField on success 1`] = `
{
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": {
    "data_type": "text",
    "input_settings": {
      "input_type": "input",
      "placeholder": "Some placeholder",
    },
  },
  "description": "This is an input field",
  "id": 123,
  "label": "Input field",
  "managed_type": null,
  "object_type": "Ticket",
  "priority": 1,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources createCustomField should resolve with a new CustomField on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "data": "{"object_type":"Ticket","label":"Test field","priority":123,"required":false,"managed_type":null,"definition":{"data_type":"text","input_settings":{"input_type":"input","placeholder":"Test placeholder"}}}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/custom-fields",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
}
`;

exports[`custom field resources getCustomField should resolve with an existing CustomField on success 1`] = `
{
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": {
    "data_type": "text",
    "input_settings": {
      "input_type": "input",
      "placeholder": "Some placeholder",
    },
  },
  "description": "This is an input field",
  "id": 123,
  "label": "Input field",
  "managed_type": null,
  "object_type": "Ticket",
  "priority": 1,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources getCustomField should resolve with an existing CustomField on success 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/custom-fields/123",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;

exports[`custom field resources getCustomFields should resolve with a list of paginated CustomFields on success 1`] = `
{
  "data": [
    {
      "created_datetime": "2022-01-02T03:04:05.123456+00:00",
      "deactivated_datetime": null,
      "definition": {
        "data_type": "text",
        "input_settings": {
          "input_type": "input",
          "placeholder": "Some placeholder",
        },
      },
      "description": "This is an input field",
      "id": 123,
      "label": "Input field",
      "managed_type": null,
      "object_type": "Ticket",
      "priority": 1,
      "required": false,
      "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
    },
  ],
}
`;

exports[`custom field resources getCustomFields should resolve with a list of paginated CustomFields on success 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {
        "archived": false,
        "object_type": "Ticket",
      },
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/custom-fields/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
}
`;

exports[`custom field resources updateCustomField should resolve with an updated CustomField on success 1`] = `
{
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": {
    "data_type": "text",
    "input_settings": {
      "input_type": "input",
      "placeholder": "Some placeholder",
    },
  },
  "description": "This is an input field",
  "id": 123,
  "label": "Input field",
  "managed_type": null,
  "object_type": "Ticket",
  "priority": 1,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources updateCustomField should resolve with an updated CustomField on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "{"object_type":"Ticket","label":"Test field","priority":123,"required":false,"managed_type":null,"definition":{"data_type":"text","input_settings":{"input_type":"input","placeholder":"Test placeholder"}}}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/custom-fields/123",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;

exports[`custom field resources updateCustomFields should resolve with a list of updated CustomFields on success 1`] = `
{
  "data": [
    {
      "created_datetime": "2022-01-02T03:04:05.123456+00:00",
      "deactivated_datetime": null,
      "definition": {
        "data_type": "text",
        "input_settings": {
          "input_type": "input",
          "placeholder": "Some placeholder",
        },
      },
      "description": "This is an input field",
      "id": 123,
      "label": "Input field",
      "managed_type": null,
      "object_type": "Ticket",
      "priority": 1,
      "required": false,
      "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
    },
  ],
}
`;

exports[`custom field resources updateCustomFields should resolve with a list of updated CustomFields on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "[{"id":123,"priority":999}]",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/custom-fields",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;

exports[`custom field resources updatePartialCustomField should resolve with an updated CustomField on success 1`] = `
{
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": {
    "data_type": "text",
    "input_settings": {
      "input_type": "input",
      "placeholder": "Some placeholder",
    },
  },
  "description": "This is an input field",
  "id": 123,
  "label": "Input field",
  "managed_type": null,
  "object_type": "Ticket",
  "priority": 1,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources updatePartialCustomField should resolve with an updated CustomField on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "{"object_type":"Ticket","label":"Test field","priority":123,"required":false,"managed_type":null,"definition":{"data_type":"text","input_settings":{"input_type":"input","placeholder":"Test placeholder"}}}",
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "url": "/api/custom-fields/123",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
